--- a/style.css
+++ b/style.css
@@ -13,19 +13,46 @@ body {
     font-family: "Heebo", serif;
     position: absolute;
     top: 0;
+
+    background-color: #FAFAFA;
 }
 
 .title {
     text-align: center;
-    
+    margin-bottom: 0;
 }
+
+.greeting {
+    color: #585858;
+    margin-left: 10px;
+    margin-top: 0px;
+}
+
+main {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding-bottom: 350px;
+    overflow-y: auto;
+    position: relative;
+}
+
 
 .controls {
     display: flex;
     justify-content: center;
     
     width: 100%;
-    
+
+    position: fixed;
+    bottom: 0;
+    background-color: #FAFAFA;
+
+    height: 350px;
+
+    box-shadow: 0 0 10px 0 #0000001a;
+
+    border-radius: 15px 15px 0 0;
 }
 
 .startStopBtn {
@@ -53,6 +80,26 @@ body {
 .pastWorkHoursDisplay {
     font-size: 150%;
     list-style-type: none;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 0 #0000001a;
+
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-left: 20px;
+}
+
+.pastWorkHoursDisplay li {
+    padding: 10px;
+    border-bottom: solid #e1e1e1 2px;
+}
+
+.pastWorkHoursDisplay li:last-child {
+    border-bottom: none;
+}
+
+.pastWorkHoursDisplay summary {
+    font-weight: bold;
 }
 
 .elapsedTime {
@@ -64,6 +111,9 @@ body {
 
     font-weight: bold;
     border-radius: 50px;
+
+    position: absolute;
+    bottom: 300px;
 }
 
 .elapsedTimeActive {
@@ -147,4 +197,51 @@ body {
     margin-bottom: 0;
     margin-top: 0;
     font-weight: bold;
+}
+
+#stopBtn {
+    display: flex;    
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+#stopBtn::after {
+    content: "";
+    background-color: #2e61d87e;
+    height: 110%;
+    width: 110%;
+    position: absolute;
+    top: -5%;
+    left: -5%;
+    border-radius: 50%;
+    z-index: -1;
+    animation: pulse 1s ease-in-out infinite;
+}
+
+@keyframes pulse {
+    0% {
+        height: 105%;
+        width: 105%;
+        top: -2.5%;
+        left: -2.5%;
+    }
+    50% {
+        height: 110%;
+        width: 110%;
+        top: -5%;
+        left: -5%;
+    }
+    75% {
+        height: 105%;
+        width: 105%;
+        top: -2.5%;
+        left: -2.5%;
+    }
+    100% {
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+    }
 }
