--- a/style.css
+++ b/style.css
@@ -155,6 +155,31 @@ main {
     right: 20px;
 }
 
+.addHoursBtn {
+    background: radial-gradient(#2e61d8, #013f8a);
+    color: white;
+
+    width: 50px;
+    height: 50px;
+
+    text-align: center;
+    text-decoration: none;
+    font-size: 200%;
+    font-weight: bold;
+
+    aspect-ratio: 1;
+    cursor: pointer;
+
+    border: none;
+    border-radius: 50%;
+
+    padding: 0;
+    
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+}
+
 .settingsMenu {
     z-index: 10;
     position: absolute;
@@ -171,7 +196,23 @@ main {
     display: none;
 }
 
-.settingsMenu input {
+.addHoursMenu {
+    z-index: 10;
+    position: absolute;
+    width: 250px;
+    height: fit-content;
+
+    padding: 10px 10px;
+
+    background-color: #ffffff;
+    border-radius: 15px;
+
+    box-shadow: 0 0 10px 0 #0000001a;
+
+    display: none;
+}
+
+.settingsMenu input, .addHoursMenu input {
     border: solid #e1e1e1 2px;
     border-radius: 10px;
     padding: 5px;
@@ -181,7 +222,7 @@ main {
     box-shadow: 0 0 10px 0 #0000001a;
 }
 
-.settingsMenu button {
+.settingsMenu button, .addHoursMenu button {
     background-color: #013f8a;
     color: white;
 
@@ -193,9 +234,15 @@ main {
     cursor: pointer;
 }
 
-.settingsMenu p {
+.settingsMenu p, .addHoursMenu p {
     margin-bottom: 0;
     margin-top: 0;
+    font-weight: bold;
+}
+
+.settingsMenu a, .addHoursMenu a {
+    text-decoration: underline;
+    color: #585858;
     font-weight: bold;
 }
 
