--- a/style.css
+++ b/style.css
@@ -17,15 +17,31 @@ body {
     background-color: #f2f2f7;
 }
 
+button {
+    font-family: "Heebo", serif;
+}
+
 .title {
     text-align: center;
     margin-bottom: 0;
+}
+
+.title img {
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
 }
 
 .greeting {
     color: #585858;
     margin-left: 10px;
     margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.quotes {
+    font-style: italic;
+    font-weight: lighter;
 }
 
 main {
@@ -92,6 +108,15 @@ main {
 .pastWorkHoursDisplay li {
     padding: 10px;
     border-bottom: solid #e1e1e1 2px;
+}
+
+.pastWorkHoursDisplay li a {
+    text-decoration: none;
+    color: #013f8a;
+    cursor: pointer;
+
+    position: absolute;
+    right: 20px;
 }
 
 .pastWorkHoursDisplay li:last-child {
