--- a/style.css
+++ b/style.css
@@ -24,16 +24,11 @@ button {
 .title {
     text-align: center;
     margin-bottom: 0;
-}
-
-.title img {
-    width: 50px;
-    height: 50px;
-    border-radius: 10px;
+    font-size: 300%;
 }
 
 .greeting {
-    color: #585858;
+    color: #ffffff;
     margin-left: 10px;
     margin-top: 0px;
     margin-bottom: 0px;
@@ -42,6 +37,7 @@ button {
 .quotes {
     font-style: italic;
     font-weight: lighter;
+    color: #000000;
 }
 
 main {
@@ -53,6 +49,17 @@ main {
     position: relative;
 }
 
+.colors {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    z-index: -1;
+
+    background: linear-gradient(45deg, #013e89 0%, #2c60d8 29%, #61efff 100%);
+    -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+}
 
 .controls {
     display: flex;
@@ -75,11 +82,11 @@ main {
     background: radial-gradient(#2e61d8, #013f8a);
     color: white;
     
-    width: 250px;
+    width: 200px;
 
     text-align: center;
     text-decoration: none;
-    font-size: 300%;
+    font-size: 250%;
 
     aspect-ratio: 1;
     cursor: pointer;
@@ -288,11 +295,17 @@ main {
     left: -5%;
     border-radius: 50%;
     z-index: -1;
-    animation: pulse 1s ease-in-out infinite;
+    animation: pulse 2s ease-in-out infinite;
 }
 
 @keyframes pulse {
     0% {
+        height: 100%;
+        width: 100%;
+        top: 0%;
+        left: 0%;
+    }
+    25% {
         height: 105%;
         width: 105%;
         top: -2.5%;
@@ -303,12 +316,6 @@ main {
         width: 110%;
         top: -5%;
         left: -5%;
-    }
-    75% {
-        height: 105%;
-        width: 105%;
-        top: -2.5%;
-        left: -2.5%;
     }
     100% {
         height: 100%;
