--- a/style.css
+++ b/style.css
@@ -337,10 +337,20 @@ main {
     z-index: 998;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     left: 0;
     top: 0;
     background-color: #ffffff;
+    animation: dropDown 1s ease-in-out;
+}
+
+@keyframes dropDown {
+    0% {
+        height: 0vh;
+    }
+    100% {
+        height: 100vh;
+    }
 }
 
 .linksMenu a {
