--- a/style.css
+++ b/style.css
@@ -335,13 +335,13 @@ main {
     align-items: center;
     flex-direction: column;
     z-index: 998;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
     left: 0;
     top: 0;
     background-color: #ffffff;
-    animation: dropDown 1s ease-in-out;
+    animation: dropDown 0.5s ease-in-out;
 }
 
 @keyframes dropDown {
