--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ main {
     
 }
 
+.exportDataBtn {
+    cursor: pointer;
+}
+
 .controls {
     display: flex;
     justify-content: center;
@@ -350,6 +354,20 @@ main {
     }
     100% {
         height: 100vh;
+    }
+}
+
+.linksMenuCloseing {
+    animation: dropUp 0.5s ease-in-out;
+    height: 0vh;
+}
+
+@keyframes dropUp {
+    0% {
+        height: 100vh;
+    }
+    100% {
+        height: 0vh;
     }
 }
 
