--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ main {
     
     mask-image: linear-gradient(to bottom, #000000, #00000000);
     -webkit-mask-image: linear-gradient(to bottom, #000000, rgba(0, 0, 0, 0));
-    
 }
 
 .exportDataBtn {
@@ -107,6 +106,18 @@ main {
     bottom: 25px;
 }
 
+.pastWorkHoursDisplayContainer {
+    margin-bottom: 25px;
+}
+
+.pastWorkHoursDisplayTitle {
+    font-size: x-large;
+    font-weight: bold;
+
+    margin-bottom: 0px;
+    margin-left: 10px;
+}
+
 .pastWorkHoursDisplay {
     font-size: 150%;
     list-style-type: none;
@@ -116,6 +127,8 @@ main {
 
     margin-left: 10px;
     margin-right: 10px;
+    margin-top: 0px;
+
     padding-left: 20px;
 }
 
