--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     position: absolute;
     top: 0;
 
+    display: flex;
+
     background-color: #f2f2f7;
 }
 
@@ -24,6 +26,7 @@ button {
 .title {
     text-align: center;
     margin-bottom: 0;
+    margin-top: 0;
     font-size: 300%;
 }
 
@@ -82,6 +85,36 @@ main {
     box-shadow: 0 0 10px 0 #0000001a;
 
     border-radius: 15px 15px 0 0;
+}
+
+nav {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: sticky;
+    top: 0;
+
+    z-index: 100;
+
+    width: 100vw;
+    height: 44pt;
+
+    background: #ffffff00;
+}
+
+nav.sticky {
+    background: #ffffffdc;
+    border-bottom: solid #e1e1e1 0.5px;
+    backdrop-filter: blur(13px);
+    -webkit-backdrop-filter: blur(13px);
+}
+
+.navTitle {
+    font-weight: bold;
+    opacity: 0;
+    transition: opacity 0.3s;
 }
 
 .startStopBtn {
@@ -410,11 +443,17 @@ main {
     position: absolute;
     z-index: 999;
 
-    top: 10px;
+ 
     right: 10px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .linksMenuBtn img {
     width: 25px;
     height: 25px;
+
+    filter: invert(1);
 }
